--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".MainActivity">
 
     <zt.zhang.camerademo.AutoFitTextureView
         android:id="@+id/texture_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/take_pic_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="拍照"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/texture_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
